--- a/package.json
+++ b/package.json
@@ -7,16 +7,27 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-watch": "^7.0.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "koa": "^2.12.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^9.0.1",
+    "koa-static": "^5.0.0",
+    "koa-webpack-dev-middleware": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --progress"
+    "start": "nodemon --exec node_modules/babel-watch/babel-watch.js src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
