--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-router": "^9.0.1",
     "koa-static": "^5.0.0",
     "koa-webpack-dev-middleware": "^2.0.2",
+    "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
