--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "koa-webpack-dev-middleware": "^2.0.2",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "nodemon --exec node_modules/babel-watch/babel-watch.js src/index.js",
